--- a/ArticlesApp/ArticlesApp/Views/UploadFile.xaml
+++ b/ArticlesApp/ArticlesApp/Views/UploadFile.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="ArticlesApp.Views.UploadFile">
+             x:Class="ArticlesApp.Views.UploadFile" NavigationPage.IconColor="Black" BackgroundColor="White">
     <ContentPage.Content>
         <StackLayout Spacing="50" Padding="7,0,7,0">
             <Label Text="press the button to upload the article file" Margin="0,0,0,-20" Padding="8,0,0,0"
